--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "build": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run build",
     "prepare:mainnet": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run prepare:mainnet",
     "prepare:staging": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run prepare:staging",
+    "prepare:fuse": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run prepare:fuse",
     "prepare:ropsten": "lerna exec --parallel --scope @mstable/protocol-subgraph -- yarn run prepare:ropsten",
     "prepare:kovan": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run prepare:kovan",
     "deploy:mainnet": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run deploy:mainnet",
     "deploy:staging": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run deploy:staging",
     "deploy:ropsten": "lerna exec --parallel --scope @mstable/protocol-subgraph -- yarn run deploy:ropsten",
-    "deploy:kovan": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run deploy:kovan"
+    "deploy:kovan": "lerna exec --parallel --scope @mstable/*-subgraph -- yarn run deploy:kovan",
+    "deploy:fuse": "lerna exec --parallel --scope @mstable/protocol-subgraph -- yarn run deploy:fuse"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.21.1",
